# iksemel-python

./: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  ci.yml  release.yml
pyiks/: __init__.py  pyiks.pyi
src/: lib.rs
tests/: test_document.py
