[package]
name = "pyiks"
description = "A Python binding for the iksemel XML/XMPP library."
version = "0.7.0"
edition = "2024"
license = "LGPL-3.0-or-later"
repository = "https://github.com/meduketto/iksemel-python"

[lib]
name = "pyiks"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28.3"
iks = "0.7.0"
